fix lists to not show on smaller screens

--- a/assets/css/responsive-default.css
+++ b/assets/css/responsive-default.css
@@ -3,6 +3,11 @@
   header, nav, footer{
     width:100%;
   }
+
+  ul {
+    list-style-type: disc;
+  }
+
   nav a{
     display:inline-block;
   }
